--- a/style.css
+++ b/style.css
@@ -126,6 +126,81 @@ img {
 .tab-border {
   border-bottom: var(--primary-color) 4px solid;
 }
+/* Tab Content */
+.tab-content {
+  padding: 3rem 0;
+  background: #000;
+  color: #fff;
+}
+#tab-content-1 .tab-1-content-inner {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
+  align-items: center;
+  justify-content: center;
+}
+#tab-2-content .tab-2-content-top {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-gap: 1rem;
+  justify-content: center;
+  align-items: center;
+}
+#tab-2-content .tab-2-content-bottom {
+  margin-top: 2rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 2rem;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Table */
+.table {
+  width: 100%;
+  margin-top: 2rem;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+.table thead th {
+  text-transform: uppercase;
+  padding: 0.8rem;
+}
+.table tbody tr td {
+  color: #999;
+  padding: 0.8rem 1.2rem;
+  text-align: center;
+}
+.table tbody tr td:first-child {
+  text-align: left;
+}
+.table tbody tr:nth-child(odd) {
+  background: #222;
+}
+
+/* FOoter */
+.footer {
+  max-width: 75%;
+  margin: 1rem auto;
+  overflow: auto;
+}
+.footer,
+.footer a {
+  color: #999;
+  font-size: 0.9rem;
+}
+.footer p {
+  margin-bottom: 1.5rem;
+}
+.footer .footer-cols {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 2rem;
+}
+.footer li {
+  line-height: 1.9;
+}
 /* container */
 .container {
   max-width: 70%;
@@ -133,6 +208,27 @@ img {
   overflow: hidden;
   padding: 0 2rem 0 2rem;
 }
+
+/* text styles */
+.text-xl {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+.text-lg {
+  font-size: 1.8rem;
+  margin-bottom: 1rem;
+}
+.text-medium {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+.text-center {
+  text-align: center;
+}
+.text-dark {
+  color: #999;
+}
+
 /* buttons */
 .btn {
   display: inline-block;
