--- a/style.css
+++ b/style.css
@@ -132,7 +132,18 @@ img {
   background: #000;
   color: #fff;
 }
-#tab-content-1 .tab-1-content-inner {
+
+/* Hide Content */
+#tab-1-content,
+#tab-2-content,
+#tab-3-content {
+  display: none;
+}
+.show {
+  display: block !important;
+}
+
+#tab-1-content .tab-1-content-inner {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 2rem;
@@ -260,4 +271,65 @@ img {
   font-size: 1rem;
   padding: 0.8rem 1.3rem;
   text-transform: uppercase;
+}
+.btn-icon {
+  margin-left: 1rem;
+}
+@media (max-width: 960px) {
+  .showcase {
+    height: 70vh;
+  }
+  .hide-sm {
+    display: none;
+  }
+
+  .showcase-top img {
+    top: 30%;
+    left: 5%;
+    transform: translate(0);
+  }
+  .showcase-content h1 {
+    font-size: 3.2rem;
+    line-height: 1;
+  }
+  .showcase-content p {
+    font-size: 1.2rem;
+  }
+
+  .footer .footer-cols {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .btn-xl {
+    font-size: 1.5rem;
+    padding: 1.4rem 2rem;
+  }
+
+  .txt-xl {
+    font-size: 1.5rem;
+  }
+  .txt-lg {
+    font-size: 1.3rem;
+  }
+  .text-medium {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 700px) {
+  .showcase::after {
+    box-shadow: inset 80px 80px 250px #000, inset -80px -80px 250px #000;
+  }
+  #tab-1-content .tab-1-content-inner {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+
+  #tab-2-content .tab-2-content-top {
+    display: block;
+    text-align: center;
+  }
+  #tab-2-content .tab-2-content-bottom {
+    grid-template-columns: 1fr;
+  }
 }
